[workspace]
members = [
    "crates/bevel-crypto",
    "crates/bevel-protocol",
    "crates/bevel-p2p",
    "crates/bevel-onion",
    "crates/bevel-storage",
    "crates/bevel-audit",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
wasm-bindgen = "0.2"
tsify = { version = "0.4", features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
bip39 = { version = "2.0", features = ["rand"] }
libp2p = { version = "0.53", features = ["tcp", "quic", "noise", "yamux", "kad", "identify", "relay", "request-response", "tokio", "macros"] }
futures = "0.3"
rand = "0.8"
hmac = "0.12"
argon2 = "0.5"
bincode = "1.3"
sled = "0.34"
zeroize = { version = "1.7", features = ["derive", "serde"] }



