[package]
name = "bevel-media"
version = "0.1.0"
edition = "2021"

[dependencies]
bevel-protocol = { path = "../bevel-protocol" }
bevel-crypto   = { path = "../bevel-crypto"   }
bevel-p2p      = { path = "../bevel-p2p"      }
serde          = { workspace = true }
serde_json     = { workspace = true }
hex            = { workspace = true }
tokio          = { workspace = true, features = ["full"] }
sha2           = { workspace = true }
aes-gcm        = { workspace = true }
rand           = { workspace = true }
walkdir        = "2.3" # For folder traversal
mime_guess     = "2.0" # For MIME type guessing
bincode        = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
tempfile = "3.3"
