[package]
name = "bevel-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevel-crypto = { path = "../bevel-crypto" }
x25519-dalek  = { workspace = true }
bevel-protocol = { path = "../bevel-protocol" }
rand = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
bevel-storage = { path = "../bevel-storage" }
bevel-onion   = { path = "../bevel-onion" }
hex = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
