[package]
name = "bevel-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
serde-big-array = "0.5"
bevel-crypto = { path = "../bevel-crypto" }
rand = { workspace = true }

