[package]
name = "bevel-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
sled = { workspace = true }
tokio = { workspace = true }

bevel-crypto = { path = "../bevel-crypto" }
bevel-protocol = { path = "../bevel-protocol" }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
