[package]
name = "bevel-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = "0.6"
serde = { workspace = true, features = ["derive"] }
bevel-crypto = { path = "../bevel-crypto" }
bevel-protocol = { path = "../bevel-protocol" }
hex = { workspace = true }
js-sys = "0.3"
tsify = { workspace = true }
getrandom = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
